--- a/app/src/main/res/layout/activity_no_account.xml
+++ b/app/src/main/res/layout/activity_no_account.xml
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="16dp"
-                android:text="Confirmar"
+                android:text="Cadastrar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/no_acc_repassword_edit_text"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -109,7 +109,7 @@
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:hint="E-mail"
-                android:inputType="textPersonName"
+                android:inputType="textEmailAddress"
                 app:layout_constraintEnd_toEndOf="@+id/no_acc_username_edit_text"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/no_acc_username_edit_text"
