--- a/app/src/main/res/layout/content_regions_navigation.xml
+++ b/app/src/main/res/layout/content_regions_navigation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".RegionsNavigation"
+    tools:context=".Controllers.RegionsNavigation"
     tools:showIn="@layout/app_bar_regions_navigation">
 
 </android.support.constraint.ConstraintLayout>
