--- a/app/src/main/res/layout/content_regions_navigation.xml
+++ b/app/src/main/res/layout/content_regions_navigation.xml
@@ -8,4 +8,13 @@
     tools:context=".RegionsNavigation"
     tools:showIn="@layout/app_bar_regions_navigation">
 
+    <FrameLayout
+        android:id="@+id/screen_area"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
