--- a/app/src/main/res/menu/activity_regions_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_regions_navigation_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/home"
+            android:title="Inicio" />
+        <item
             android:id="@+id/nav_mata"
             android:icon="@drawable/mata"
             android:title="Mata" />
