--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -7,7 +7,7 @@
     android:backgroundTint="#FF00FF00"
     android:orientation="vertical"
     android:weightSum="3"
-    tools:context=".OptionsFragment">
+    tools:context=".Controllers.OptionsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
