--- a/app/src/main/res/layout/activity_no_account.xml
+++ b/app/src/main/res/layout/activity_no_account.xml
@@ -39,7 +39,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@drawable/placeholder"
                 app:civ_border_color="#454545"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
