--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,30 +42,26 @@
     android:textColor="#000"
     android:textSize="18sp" />
 
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="A cana-de-açúcar é um dos principais produtos agrícolas, a Paraíba é o terceiro maior produtor de cana-de-açúcar do Nordeste, é importante destacar os plantios de algodão que tem uma grande importância no estado, o caju e o abacaxi são as frutas que a Paraíba mais produz."
-    android:textColor="#555" />
+        <TextView
+            android:id="@+id/description_agricultura"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="A cana-de-açúcar é um dos principais produtos agrícolas, a Paraíba é o terceiro maior produtor de cana-de-açúcar do Nordeste, é importante destacar os plantios de algodão que tem uma grande importância no estado, o caju e o abacaxi são as frutas que a Paraíba mais produz."
+            android:textColor="#555" />
     </LinearLayout>
 
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/action_share"
-    android:textColor="#FFAB40"
-    android:background="#fff"/>
+        <Button
+            android:id="@+id/agricultura_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            android:text="@string/action_share"
+            android:textColor="#FFAB40" />
 
-    <Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/action_explore"
-    android:textColor="#FFAB40"
-    android:background="#fff"/>
     </LinearLayout>
     </LinearLayout>
 
@@ -101,30 +97,26 @@
     android:textColor="#000"
     android:textSize="18sp" />
 
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="A criação de gado bovino na Paraíba destina-se à produção de carne e leite, este para atender às indústrias de laticínios e principalmente às queijarias disseminadas em todo o Estado."
-    android:textColor="#555" />
+        <TextView
+            android:id="@+id/description_pecuaria"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="A criação de gado bovino na Paraíba destina-se à produção de carne e leite, este para atender às indústrias de laticínios e principalmente às queijarias disseminadas em todo o Estado."
+            android:textColor="#555" />
     </LinearLayout>
 
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/action_share"
-    android:textColor="#FFAB40"
-    android:background="#fff"/>
+        <Button
+            android:id="@+id/share_pecuaria"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#fff"
+            android:text="@string/action_share"
+            android:textColor="#FFAB40" />
 
-    <Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/action_explore"
-    android:textColor="#FFAB40"
-    android:background="#fff"/>
     </LinearLayout>
     </LinearLayout>
     </android.support.v7.widget.CardView>
