--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,6 +59,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#fff"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             android:text="@string/action_share"
             android:textColor="#FFAB40" />
 
@@ -114,6 +116,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#fff"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
             android:text="@string/action_share"
             android:textColor="#FFAB40" />
 
